# dochain

./: .gitignore  LICENSE  README.md  set_env.example.sh  test_excel_export.sh  test_ocr.sh
docs/: feat-output-to-excel.md
ocr-cli-tool/: README.md  pyproject.toml  requirements.txt
ocr-cli-tool/src/: cli.py
ocr-cli-tool/src/dochain_ocr/: __init__.py  __main__.py  cli.py  engine_baidu.py  engine_local.py  engine_smart.py  excel_exporter.py  processors.py
ocr-cli-tool/src/dochain_ocr/ocr/: engine_api.py  engine_baidu.py  engine_smart.py
ocr-cli-tool/src/ocr/: base.py  engine.py  engine_local.py
ocr-cli-tool/tests/: conftest.py  test_base.py  test_cli.py  test_engine_api.py  test_engine_baidu.py  test_engine_smart.py  test_excel_exporter.py  test_processors.py
