[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dochain-ocr"
version = "0.1.0"
description = "Multi-engine OCR CLI tool with smart document type detection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pillow>=10.0",
    "pymupdf>=1.24",
    "requests>=2.31",
    "opencv-python>=4.10",
    "numpy>=2.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
local = [
    "paddleocr>=2.9",
    "paddlepaddle>=3.0",
]

[project.scripts]
dochain-ocr = "dochain_ocr.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dochain_ocr"]